# govee-api

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: coverage.yml  publish.yml  rust.yml
src/: lib.rs  structs.rs
src/api/: api.rs
src/structs/: govee.rs
src/tests/: api.rs
src/utils/: request.rs
