[package]
name = "govee"
authors = ["Maciej Gierada @mgierada"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = {version = "0.11.14", features = ["blocking", "json"]}
serde = {version = "1.0.154", features = ["derive"]}
serde_json = "1.0.94"
lazy_static = "1.4.0"
mockito = "1.0.2"
tokio = {version = "1.28.2", features = ["full"]}
