[package]
name = "govee-api"
authors = ["Maciej Gierada"]
version = "1.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["govee", "api", "wrapper", "client", "sdk"]
categories = ["command-line-utilities"]
description = "A blazingly fast thin wrapper around the public Govee API written in Rust"
homepage = "https://github.com/mgierada/govee"
repository = "https://github.com/mgierada/govee"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.14", features = ["blocking", "json"]}
serde = {version = "1.0.154", features = ["derive"]}
serde_json = "1.0.94"
lazy_static = "1.4.0"
futures = "0.3"

[dev-dependencies]
tokio = {version = "1.32.0", features = ["full"]}
mockito = "1.1.0"
